# activitybook

./: pyproject.toml
activitybook/: activitybook.py  multipage.py
activitybook/src/: lesson_five_activities.py  lesson_one_activities.py  lesson_seven_activities.py  lesson_three_activities.py  lesson_two_activities.py
tests/: test_activitybook.py
