[tool.poetry]
name = "activitybook"
version = "0.1.0"
description = ""
authors = ["santos borom <santos.borom@arkastra.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.3"
pandas = "^1.2.4"
streamlit = "^0.82.0"
plotly = "^4.14.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
